--- a/pacify-react/src/index.scss
+++ b/pacify-react/src/index.scss
@@ -6,5 +6,7 @@ html,
 body {
 	margin: 0;
 	height: 100%;
-	background-color: black !important;
+	// background-color: black !important;
+	background-color: whitesmoke !important;
+	font-size: 12px;
 }
